opam-version: "2.0"
name: "satysfi-cancel"
version: "0.0.0"
synopsis: "The cancel package"
description: """
The SATySFi equivalent of the LateX's cancel package.
"""
maintainer: "Yu Shimura <mail@yuhr.org>"
authors: "Yu Shimura <mail@yuhr.org>"
license: "CC0-1.0"
homepage: "https://github.com/yuhr/satysfi-cancel"
bug-reports: "https://github.com/yuhr/satysfi-cancel/issues"
dev-repo: "git+https://github.com/yuhr/satysfi-cancel.git"
depends: [
  "satysfi"
  "satyrographos"
  "satysfi-dist"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "cancel"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]